!(feat) setup, readme, build fixes